# tycho-simulation

./: Cargo.toml
examples/price_printer/: Readme.md  liquidity_data.json  main.rs  tempCodeRunnerFile.rs
examples/price_printer/archive/: main.rs
examples/static_data_ingestor/: Readme.md
examples/static_data_ingestor/extractor/: retreive.py
examples/static_data_ingestor/ingestor/: main.rs
src/evm/engine_db/: simulation_db.rs
src/evm/protocol/pancakeswap_v2/: state.rs
src/evm/protocol/vm/: state.rs
static_data_ingestor/: Readme.md
static_data_ingestor/ingestor/: Cargo.toml
static_data_ingestor/ingestor/logs/: price_printer.log.2025-06-02
static_data_ingestor/ingestor/src/: main.rs
